--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
       <title>Exemplo</title>
   </head>
   <body>
-      <h1>Olá Mundo!!!</h1>
+      <h1 id="title">Olá Mundo!!!</h1>
+      <script src="js/script.js"></script>
   </body>
 </html>
